# orchard-bot

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  main.yml
ob/: constants.py  crosscode.py  db.py  interactions.py  keys.py  message_builder.py  register.py  slash_router.py  statuses.py  utils.py
ob/commands/: __init__.py  add.py  approve.py  counter.py  dtest.py  passcode.py  ping.py
ob/handlers/: __init__.py  orchard_db.py  set_approval.py
src/: main.py
